# OmniNode

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  grid_state.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_guardian_intercept.py
.github/workflows/: docs.yml
api/: index.html
backend/: pyproject.toml
backend/scripts/: start_warroom.py
backend/tests/: test_simulation.py
configuration/: index.html
core-concepts/: index.html
dashboard/: app.py  package.json
data/: registry_store.json
development/: index.html
docs/: api.md  configuration.md  core-concepts.md  development.md  index.md  war-room.md
frontend/: package-lock.json
scripts/: start_all.py
search/: search_index.json
site/: index.html
site/api/: index.html
site/configuration/: index.html
site/core-concepts/: index.html
site/development/: index.html
site/search/: search_index.json
src/: __init__.py
src/api/: event_bus.py  websocket.py
src/common/: config.py  influx_client.py  llm_client.py
src/coordination/: audit.py  optimizer.py  peer_protocol.py  zone_coordinator.py
src/dashboard/: app.py
src/domains/: base_adapter.py
src/mcp_multi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/physical/: base_actuator.py
src/registry/: server.py  store.py
src/simulation/: data_generator.py  power_grid.py  scenarios.py
src/strategic/: agent.py  (+3 more)
tests/: conftest.py  test_actuators.py  test_coordinator.py  test_registry.py  test_scenarios.py  test_sensors.py
(+42 files in other folders)
