[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "mcp-multi-agent"
version = "0.1.0"
description = "MCP-Based Multi-Agent System for Power Grid & Beyond"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "paho-mqtt>=2.0.0",
    "aiomqtt>=2.0.0",
    "pandapower>=2.14.0",
    "influxdb-client[async]>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "plotly>=5.22.0",
    "dash>=2.17.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
    "openai>=2.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "zensical>=0.0.5",
    "mkdocstrings[python]>=0.24.0",
    "pre-commit>=3.6.0",
    "interrogate>=1.7.0",
]

[project.scripts]
mcp-cli = "src.strategic.cli:main"
mcp-registry = "src.registry.server:main"
mcp-dashboard = "src.dashboard.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
